--- a/Help.html
+++ b/Help.html
@@ -4,9 +4,8 @@
 		<link rel="icon" href="/Rain-World-Devlog/Images/Archived Images/ljrr7.jpg">
 		<link rel="stylesheet" href="/Rain-World-Devlog/css/style.css">
 		
-		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:card" content="summary">
 		<meta name="twitter:title" content="Rain World Devlog Archive">
-		<meta name="twitter:image" content="">
 	</head>
 	<body class="body">
 		<div class="header"><img src="/Rain-World-Devlog/Images/Title.png">&emsp;&emsp;&mdash;&emsp;&emsp;<a href="/Rain-World-Devlog/Home.html">Home</a></div>
