--- a/Help.html
+++ b/Help.html
@@ -8,7 +8,7 @@
 		<meta name="twitter:title" content="Rain World Devlog Archive">
 	</head>
 	<body class="body">
-		<div class="header"><img src="/Rain-World-Devlog/Images/Title.png">&emsp;&emsp;&mdash;&emsp;&emsp;<a href="/Rain-World-Devlog/Home.html">Home</a></div>
+		<div class="header"><img src="/Rain-World-Devlog/Images/Title.png">&emsp;&emsp;&mdash;&emsp;&emsp;<a href="/Rain-World-Devlog/Home">Home</a></div>
 		<script src="/Rain-World-Devlog/js/header.js"></script>
 		<br><br>
 		<table height="80%" align="center" style="vertical-align:middle; position:absolute"><tr><td>
@@ -32,7 +32,7 @@
 						<br>
 						<h2>Contact</h2>
 						Any question? Any suggestion? Feel free come and talk in the #archive-projects channel of the <a href="https://discord.gg/rainworld">Rain World Discord server</a>, or just DM me (CandleSign#4539).<br>
-						Do you have any of the missing images, or do you want to help search? <a href="/Rain-World-Devlog/Lost images.html">Here</a> is a list to check what has not been found yet.<br>
+						Do you have any of the missing images, or do you want to help search? <a href="/Rain-World-Devlog/Lost images">Here</a> is a list to check what has not been found yet.<br>
 						And finally, if you want to and have some useful knowledge, you can help build the site itself! I'm particularly thinking of implementing a search bar for the paged version, but any improvement is welcome (I'm a web design beginner and the project was originally just intended to help me find messages, so making it helpful to everyone is still largely a work in progress).<br>
 						<br>
 						<br>
