--- a/Home.html
+++ b/Home.html
@@ -16,12 +16,12 @@
             </div>
             <br><br><br>
             <div class="homebox" style="font-size: 20pt; line-height: 3em">
-                <a href="/Rain-World-Devlog/Full Devlog.html">Full version</a><br>
-                <a href="/Rain-World-Devlog/Pages/001.html">Paged version</a><br>
+                <a href="/Rain-World-Devlog/Full Devlog">Full version</a><br>
+                <a href="/Rain-World-Devlog/Pages/001">Paged version</a><br>
                 <a href="https://github.com/CandleSign/Rain-World-Devlog/releases" target="_blank">Downloadable version</a><br>
                 <a href="https://forums.tigsource.com/index.php?topic=25183" target="_blank">Original devlog</a><br>
                 <span style="line-height: 1em"><br></span>
-                <div style="text-align:right"><a href="/Rain-World-Devlog/Help.html"><img src="/Rain-World-Devlog/Images/Qmark.png"></a></div>
+                <div style="text-align:right"><a href="/Rain-World-Devlog/Help"><img src="/Rain-World-Devlog/Images/Qmark.png"></a></div>
             </div>
         </td></tr></table>
         <br>
