--- a/Lost images.html
+++ b/Lost images.html
@@ -15,7 +15,7 @@
 		<meta name="twitter:title" content="Rain World Devlog Archive">
 	</head>
 	<body class="body">
-		<div class="header"><img src="/Rain-World-Devlog/Images/Title.png">&emsp;&emsp;&mdash;&emsp;&emsp;<a href="/Rain-World-Devlog/Home.html">Home</a></div>
+		<div class="header"><img src="/Rain-World-Devlog/Images/Title.png">&emsp;&emsp;&mdash;&emsp;&emsp;<a href="/Rain-World-Devlog/Home">Home</a></div>
 		<script src="/Rain-World-Devlog/js/header.js"></script>
 		<br><br>
 		<table>
