--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0; url='Full devlog'"/>
+    <meta http-equiv="Refresh" content="0; url='Home'"/>
   </head>
   <body></body>
 </html>
