--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
   <head>
+    <title>Home - Rain World Devlog</title>
+    <link rel="icon" href="/Rain-World-Devlog/Images/Archived Images/ljrr7.jpg">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Rain World Devlog Archive">
     <meta http-equiv="Refresh" content="0; url='Home'"/>
   </head>
   <body></body>
