--- a/Image status.html
+++ b/Image status.html
@@ -442,8 +442,8 @@
 			<tr>
 				<td><a href="http://oi50.tinypic.com/27wyb21.jpg">http://oi50.tinypic.com/27wyb21.jpg</a><input type="checkbox"></td>
 				<td><a href="https://forums.tigsource.com/index.php?topic=25183.msg741268#msg741268">https://forums.tigsource.com/index.php?topic=25183.msg741268#msg741268</a></td>
-				<td><b>June 02, 2012 - update 50</b><br>Taking a first look at how I'll actually implement some graphics for the croc.<br>Not super happy with any of the heads, but hopefully I'm getting there.</td>
-				<td class="q~ q="></td>
+				<td></td>
+				<td class="q~"></td>
 				<td><a href="https://discord.com/channels/291184728944410624/291185557789343744/324142601487777792">Discord</a>, <a href="https://discord.com/channels/291184728944410624/385548182102212608/429832886284451841">Discord</a>, matching filename<br><a href="https://discord.com/channels/291184728944410624/296133304632213504/931612853255962664">Discord</a><br>Both matching dimensions from <a href="https://discord.com/channels/291184728944410624/291185157778702336/346010761564520449">Discord</a> (366x534)<span class="preloadimg" data-imgurl="./Images/Archived%20Images/27wyb21.jpg"></span></td>
 			</tr>
 			<tr>
@@ -939,7 +939,7 @@
 			<tr>
 				<td><a href="http://oi39.tinypic.com/9scu1z.jpg">http://oi39.tinypic.com/9scu1z.jpg</a><input type="checkbox"></td>
 				<td><a href="https://forums.tigsource.com/index.php?topic=25183.msg889518#msg889518">https://forums.tigsource.com/index.php?topic=25183.msg889518#msg889518</a></td>
-				<td><b>May 15, 2013 - post-update 144</b><br>Started experimenting with giving the four players small, small differences. See if you can spot them!<br>"These look great! Just adding that pixelation seems to abstract them enough to make them mysterious. And the scarring is totally cool."<br>"My favorite is the yellow one, if he survived whatever caused him to have two huge scars under his eyes, he can survive anything!"</td>
+				<td></td>
 				<td class="q~"></td>
 				<td><a href="https://discord.com/channels/291184728944410624/385548182102212608/471719668512456706">Discord</a>, <a href="https://discord.com/channels/291184728944410624/291185157778702336/411691554311241728">Discord</a>, <a href="https://discord.com/channels/291184728944410624/291185557789343744/324142837362982912">Discord</a>, matching filename and dimensions from <a href="https://discord.com/channels/291184728944410624/291185157778702336/334447594224746498">Discord</a> (452x708)<span class="preloadimg" data-imgurl="./Images/Archived%20Images/9scu1z.jpg"></span></td>
 			</tr>
@@ -1100,7 +1100,7 @@
 			<tr>
 				<td><a href="http://oi42.tinypic.com/1r27om.jpg">http://oi42.tinypic.com/1r27om.jpg</a><input type="checkbox"></td>
 				<td><a href="https://forums.tigsource.com/index.php?topic=25183.msg932740#msg932740">https://forums.tigsource.com/index.php?topic=25183.msg932740#msg932740</a></td>
-				<td><b>August 17, 2013 - update 160</b><br>I felt like doing something fun today, so I implemented sticking creatures to walls with spears. In the gif I pull the lizard into position with the mouse. The movement is jerky and the lizard looks chopped up, but needless to say there won't be any such behaviour  in the final game. It's just a convinient dev tool to be able to instantly move creatures around like that.<br>When I look at this thing now I realize how horribly brutal it is</td>
+				<td></td>
 				<td class="q~"></td>
 				<td><a href="https://www.neogaf.com/threads/rain-world-coming-march-28th-to-ps4-pc-launch-trailer-released.1350856/page-2#post-231707452">NeoGAF</a> (<a href="https://web.archive.org/web/20230506081235/https://i.imgur.com/gyjaUXq.gif">Wayback Machine</a>)<br><a href="https://discord.com/channels/291184728944410624/385548182102212608/446783729864671233">Discord</a><span class="preloadimg" data-imgurl="./Images/Archived%20Images/1r27om.jpg"></span></td>
 			</tr>
@@ -1506,8 +1506,8 @@
 			<tr>
 				<td><a href="http://oi41.tinypic.com/af9h1h.jpg">http://oi41.tinypic.com/af9h1h.jpg</a><input type="checkbox"></td>
 				<td><a href="https://forums.tigsource.com/index.php?topic=25183.msg977405#msg977405">https://forums.tigsource.com/index.php?topic=25183.msg977405#msg977405</a></td>
-				<td><b>December 21, 2013 - post-update 215</b><br>True... Monochrome might look better, but I think it would be harder to read as the hue difference is meant to set the letter shapes apart...</td>
-				<td class="q~ q="></td>
+				<td></td>
+				<td class="q~"></td>
 				<td><a href="https://selectbutton.net/t/rain-world/7885/11">selectbutton 2</a>, matching filename (<a href="https://web.archive.org/web/20210416225142/https://selectbutton.s3.dualstack.us-west-2.amazonaws.com/original/3X/d/6/d6c125e613559525a3becfa0db6b1b8f99e15080.png">Wayback Machine</a>)<br><a href="https://discord.com/channels/291184728944410624/385548182102212608/580901382832390154">Discord</a><br><a href="https://forums.tigsource.com/index.php?topic=25183.msg977514#msg977514">Edited version from another post, still hosted</a><br>(It would be simple if the Discord one was just a cropped lower-quality version of the selectbutton one but it's also higher for some reason. Are they both cropped from the original but differently? Picking the better quality here but this isn't a closed case)<span class="preloadimg" data-imgurl="./Images/Archived%20Images/af9h1h.jpg"></span></td>
 			</tr>
 			<tr>
@@ -3781,7 +3781,7 @@
 			<tr>
 				<td><a href="https://giant.gfycat.com/EqualYawningAmberpenshell.gif">https://giant.gfycat.com/EqualYawningAmberpenshell.gif</a><input type="checkbox"></td>
 				<td><a href="https://forums.tigsource.com/index.php?topic=25183.msg1126141#msg1126141">https://forums.tigsource.com/index.php?topic=25183.msg1126141#msg1126141</a></td>
-				<td><b>April 03, 2015 - post-update 411</b><br>Some moving boxes! It's pretty murky what's going on right now as there are no animations, when skinning them I want to add visual indicators for when they're charging, grabbing you etc so you have a more clear understanding of what's going on.</td>
+				<td></td>
 				<td class="q-"></td>
 				<td><a href="https://github.com/thalber/rw-devlog-archives/blob/main/endump/red%20box%20squidcada.gif">Enderzilla's archive</a> (<a href="https://web.archive.org/web/20230827184540/https://gfycat.com/equalyawningamberpenshell">improvable gfycat</a>)<span class="preloadimg" data-imgurl="./Images/Archived%20Images/EqualYawningAmberpenshell.gif"></span></td>
 			</tr>
